--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-native-maps": "^0.17.1",
 		"react-redux": "^5.0.6",
 		"reactotron-react-native": "^1.13.2",
+		"reactotron-redux": "^1.13.0",
 		"redux": "^3.7.2"
 	},
 	"devDependencies": {
