--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"react-redux": "^5.0.6",
 		"reactotron-react-native": "^1.13.2",
 		"reactotron-redux": "^1.13.0",
-		"redux": "^3.7.2"
+		"reactotron-redux-saga": "^1.13.0",
+		"redux": "^3.7.2",
+		"redux-saga": "^0.16.0"
 	},
 	"devDependencies": {
 		"babel-eslint": "^8.0.2",
